bootstrap/frontend/kustomize/accident-web/overlays/dev/patch-virtual-service-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accident-web-http
spec:
  hosts:
  - accident-web.dev.42dot.io
  gateways:
  - istio-system/https
  http:
  - match:
    - uri:
        prefix: '/'
    route:
    - destination:
        host: 'accident-web-dev.fii-dev.svc.cluster.local'
        port:
          number: 80
    corsPolicy:
      allowCredentials: true
      allowOrigin: ["*"]
      allowMethods:
        - POST
        - GET
        - OPTIONS
      allowHeaders: ["*"]
      maxAge: "300s"
